css/style.css
/* Font Import */
@import url('https://fonts.googleapis.com/css?family=Quicksand');

html,body {
    /* box-sizing: border-box; */
    margin: 0px;
    padding: 0px;
    font-family: 'Quicksand', sans-serif;
    /* font-family: 'Raleway', sans-serif; */
}

h1 {
  /* padding-top: 10px;
  padding-left: 20px; */
  font-size: 120px;
  font-weight: bold;
}

a {
  color: #fff;
}

.prettyColor {
  background-color: #479ec6;
}

.prettyFontColor {
  color: #479ec6;
}


.instagramLogo {
  padding-left: 13px;
  padding-top:5px;
  width: 20px;
  height: 20px;

}

.logoAndName {
  display: flex;
  flex-direction: row;
  padding-bottom: 60px;
}

.paradeNameWithShortDescription {
  display:flex;
  flex-direction: column;
  padding-top:20px;
  padding-left:10px;
}

.paradeTitle {
  width:450px;
  height:139px;
}

.mainDescription {
  font-size: 20px;
}

.appDownloadButtons {
  width: 260px;
  height: 43px;
  padding-left: 45px;
  padding-bottom: 20px;
}

.navBar {
  position: absolute;
  padding-left: 20px;
  padding-top: 20px;
  padding-bottom: 0px;
  font-size: 20px;
  right: 100px;
}

.navBarElements {
  padding-top: 30px;
  display: flex;
  margin-right: 10px;
  flex-direction: row;
  align-content: stretch;
  font-weight: bold;

}

.icon {
  width: 80px;
  height: 80px;
}


.firstPanelBody {
  padding-left: 45px;
  padding-right: 40px;
  /* text-align: center; */
  font-size: 23px;
}

.firstPanelHeading {
  padding-left: 40px;
  line-height: 0px;
}

.firstPanel {
  flex-direction: row;
  display: flex;
  color: #fff;
}

.secondPanel {
  text-align: center;
  padding-left: 420px;
  padding-right: 420px;
  padding-bottom: 10px;
}


.meetTheTeam {
  flex-direction: row;
  display: flex;
  padding-left: 100px;
  padding-right: 100px;
  text-align: center;
  /* min-width: 200px; */
}

.meetTheTeamRow {
  flex-direction: row;
  display: flex;
}

.bio {
  margin: 20px; /* TODO */
  font-size: 17px;
  min-width: 200px;
  /* margin-right: 20px; */

}

.timeline {
  padding-right: 28px;
}

.thirdPanel {
  text-align: center;
  padding-left: 450px;
  padding-right: 450px;
  padding-bottom: 20px;
  display: flex;
  flex-direction: column;
  color: #fff;
}

.fourthPanel {
  background-color: #808080;
  display: flex;
  /* flex-direction: column; */
  /* text-align: right; */
}


.iphone {
  /* width: 70%; */
  padding-top: 130px;
  padding-left:200px;
  max-width: 500px;
  max-height: 700px;
  display: flex-end;
  margin-left: auto;
  margin-right: auto;
}

.stickLeft {
    /* box-sizing: border-box; */
    float: left;
    width: 50%;
    display: flex;
    /* align-items: center; */
    align-content: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding-bottom: 20px;
}
.stickRight {
    width: 100%;
    display: flex;
    align-items: flex-end;
}


/* Clear floats after the columns */
.row:after {
    box-sizing: border-box;
    content: "";
    display: table;
    clear: both;
}

.headshot {
  width: 130px;
  height: 130px;
  border-radius: 50%;
}

/* when we get to 600px */
@media screen and (max-width: 600px) {
  .paradeTitle {
    width: 90%;
    height: auto;
  }

  .logoAndName {
    align-items: center;
  }

}



/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 1300px) {
.stickLeft, .stickRight, .firstPanel {
        box-sizing: border-box;
        width: 100%;
        min-height: inherit;
        flex-direction: column;
        padding-bottom: 0px;
    }

  .navBar {
      right: 0;
      top: 10;
      left: 25;
  }

  .firstPanelHeading {
    padding-left: 15px;
  }

    /* in mobile view */
  .logoAndName {
    padding-top: 150px;
    display: flex;
    flex-direction: column;
    padding-bottom: 0px;
  }

  .appDownloadButtons {
    width: 290px;
    height: 48px;
    padding: 0;
    padding-left: 20px;
    padding-bottom: 20px;
  }

  .firstPanelBody {
    padding-left: 20px;

  }

  .secondPanel {
    text-align: center;
    padding-left: 20px;
    padding-right: 20px;
  }

  .bio {
    margin: 10px;
    /* TODO better mobile support */
  }


  .meetTheTeam {
    display: flex;
    padding: 0px;
    justify-content: center;
    flex-direction: column;
    /* padding-left: 320px; */
    /* padding-right: 320px; */
    text-align: center;
    /* min-width: 200px; */
  }

  .meetTheTeamRow {
    flex-direction: column;
    display: flex;
  }


  .thirdPanel {
    padding-left: 20px;
    padding-right: 20px;
  }

  .fourthPanel {

  }

   .iphone {
       width: 80%;
      padding-top: 5px;
      padding-left:0px;

  }

  html,body {
        overflow:auto;
  }



  h1 {
    padding-top: 40px;
    font-size: 85px;
  }
}

/* thanks to http://adis.ca/entry/2011/pretty-code-block-in-css/ for code css*/
code {
        font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
        font-size: 22px;
        color: #B73650;
        line-height: 140%;
        white-space: pre;
        white-space: pre-wrap;
        white-space: -moz-pre-wrap;
        white-space: -o-pre-wrap;
        background: #F8F2F4;
}

#content code {
        display: block;
        padding: 0.5em 1em;
        border: 1px solid #bebab0;
}

